--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,8 +19,8 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="jumbotron">
-                            <h1>ConnectUp!</h1>
-                            <p>Join today and professionally connect with businesses and workers from all over the globe!</p>
+                            <h1>Instapop!</h1>
+                            <p>Join today and connect with millions of users posting images all over the world!</p>
                         </div>
                         <!-- your content here -->
 
