--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -30,24 +30,11 @@
                                 <select name="huge" class="selectpicker" data-style="btn-info btn-fill btn-block" form="userForm" th:field="*{roleName}" id="select">
                                     <!--<option disabled selected> Choose city</option>-->
 
-                                    <option value="recruiter" th:text="${'recruiter'}">Recruit </option>
-                                    <option value="job seeker" th:text="${'job seeker'}">Job </option>
-
-
+                                    <option value="user" th:text="${'User'}">User </option>
 
                                 </select>
                             </div>
 
-                            <div class="form-group">
-                                <label for="firstName">Enter First Name:</label>
-                                <input type="text" class="form-control" th:field="*{firstName}" id="firstName" placeholder="Jill"/>
-                                <span class="text-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">First Name Error</span>
-                            </div>
-                            <div class="form-group">
-                                <label for="lastname">Enter Last Name:</label>
-                                <input type="text" class="form-control" th:field="*{lastName}" id="lastname" placeholder="Smith"/>
-                                <span class="text-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">Last Name Error</span>
-                            </div>
                             <div class="form-group">
                                 <label for="email">Enter Email:</label>
                                 <input type="text" class="form-control" th:field="*{email}" id="email" placeholder="anemail@email.com"/>
