--- a/src/main/resources/templates/preview.html
+++ b/src/main/resources/templates/preview.html
@@ -20,19 +20,16 @@
                 <div class="row">
                     <div class="col-md-3"></div>
 
-                    <div class="col-md-3">
-                        <th:block th:if="${image.filterValue}!=0">
+                    <div class="col-md-5">
+                        <div class="post">
+
                             <div th:utext="${image.filterUrl1}">
 
                             </div>
-                        </th:block>
-                        <th:block th:if="${image.filterValue}==0">
-                            <div >
-                                <img th:src="${image.filterUrl1}"/>
-                            </div>
-                        </th:block>
+                            <p th:text="${image.caption}">Caption</p>
+                        </div>
 
-                        <p th:text="${image.caption}">Caption</p>
+
                     </div>
                 </div>
                     <!-- your content here -->
