bug fixes, follows, profiles

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="jumbotron">
-                            <h1>Instapop!</h1>
+                            <h1>Instapopz!</h1>
                             <p>Join today and connect with millions of users posting images all over the world!</p>
                         </div>
                         <!-- your content here -->
