--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -68,11 +68,11 @@
         -->
         <div class="logo">
             <a href="/" class="simple-text logo-mini">
-                CU
+                I
             </a>
 
             <a href="/" class="simple-text logo-normal">
-                ConnectUp
+                Instapopz
             </a>
         </div>
         <div class="sidebar-wrapper">
@@ -80,7 +80,7 @@
             <th:block sec:authorize="isAuthenticated()">
                 <div class="user">
                     <div class="photo">
-                        <img src="../assets/img/faces/face-2.jpg" />
+                        <img src="/assets/img/faces/face-2.jpg" />
                     </div>
                     <div class="info">
                         <a data-toggle="collapse" href="#collapseExample" class="collapsed">
@@ -292,63 +292,63 @@
 </body>
 <th:block th:fragment="scripts">
     <!--   Core JS Files. Extra: TouchPunch for touch library inside jquery-ui.min.js   -->
-    <script src="../assets/js/jquery-3.1.1.min.js" type="text/javascript"></script>
-    <script src="../assets/js/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="../assets/js/perfect-scrollbar.min.js" type="text/javascript"></script>
-    <script src="../assets/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/assets/js/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script src="/assets/js/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="/assets/js/perfect-scrollbar.min.js" type="text/javascript"></script>
+    <script src="/assets/js/bootstrap.min.js" type="text/javascript"></script>
 
     <!--  Forms Validations Plugin -->
-    <script src="../assets/js/jquery.validate.min.js"></script>
+    <script src="/assets/js/jquery.validate.min.js"></script>
 
     <!-- Promise Library for SweetAlert2 working on IE -->
-    <script src="../assets/js/es6-promise-auto.min.js"></script>
+    <script src="/assets/js/es6-promise-auto.min.js"></script>
 
     <!--  Plugin for Date Time Picker and Full Calendar Plugin-->
-    <script src="../assets/js/moment.min.js"></script>
+    <script src="/assets/js/moment.min.js"></script>
 
     <!--  Date Time Picker Plugin is included in this js file -->
-    <script src="../assets/js/bootstrap-datetimepicker.js"></script>
+    <script src="/assets/js/bootstrap-datetimepicker.js"></script>
 
     <!--  Select Picker Plugin -->
-    <script src="../assets/js/bootstrap-selectpicker.js"></script>
+    <script src="/assets/js/bootstrap-selectpicker.js"></script>
 
     <!--  Switch and Tags Input Plugins -->
-    <script src="../assets/js/bootstrap-switch-tags.js"></script>
+    <script src="/assets/js/bootstrap-switch-tags.js"></script>
 
     <!-- Circle Percentage-chart -->
-    <script src="../assets/js/jquery.easypiechart.min.js"></script>
+    <script src="/assets/js/jquery.easypiechart.min.js"></script>
 
     <!--  Charts Plugin -->
-    <script src="../assets/js/chartist.min.js"></script>
+    <script src="/assets/js/chartist.min.js"></script>
 
     <!--  Notifications Plugin    -->
-    <script src="../assets/js/bootstrap-notify.js"></script>
+    <script src="/assets/js/bootstrap-notify.js"></script>
 
     <!-- Sweet Alert 2 plugin -->
-    <script src="../assets/js/sweetalert2.js"></script>
+    <script src="/assets/js/sweetalert2.js"></script>
 
     <!-- Vector Map plugin -->
-    <script src="../assets/js/jquery-jvectormap.js"></script>
+    <script src="/assets/js/jquery-jvectormap.js"></script>
 
     <!--  Google Maps Plugin    -->
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
 
     <!-- Wizard Plugin    -->
-    <script src="../assets/js/jquery.bootstrap.wizard.min.js"></script>
+    <script src="/assets/js/jquery.bootstrap.wizard.min.js"></script>
 
     <!--  Bootstrap Table Plugin    -->
-    <script src="../assets/js/bootstrap-table.js"></script>
+    <script src="/assets/js/bootstrap-table.js"></script>
 
     <!--  Plugin for DataTables.net  -->
-    <script src="../assets/js/jquery.datatables.js"></script>
+    <script src="/assets/js/jquery.datatables.js"></script>
 
     <!--  Full Calendar Plugin    -->
-    <script src="../assets/js/fullcalendar.min.js"></script>
+    <script src="/assets/js/fullcalendar.min.js"></script>
 
     <!-- Paper Dashboard PRO Core javascript and methods for Demo purpose -->
-    <script src="../assets/js/paper-dashboard.js"></script>
+    <script src="/assets/js/paper-dashboard.js"></script>
 
     <!-- Paper Dashboard PRO DEMO methods, don't include it in your project! -->
-    <script src="../assets/js/demo.js"></script>
+    <script src="/assets/js/demo.js"></script>
 </th:block>
 </html>
