--- a/src/main/resources/templates/preview.html
+++ b/src/main/resources/templates/preview.html
@@ -54,7 +54,7 @@
                                     <option value="7" th:text="${'Fill Light'}">blue </option>
                                     <option value="8" th:text="${'Brighten'}">blue </option>
                                     <option value="9" th:text="${'Darken'}">blue </option>
-                                    <option value="10" th:text="${'Brightest'}">blue </option>
+                                    <option value="10" th:text="${'Auto-Bright'}">blue </option>
 
                                 </select>
                             </div>
